more adjutsments on cookie